tp3_compiladores/src/cool.output
Terminais sem uso na gramática

    ERROR


Estado 9 conflitos: 2 de deslocamento/redução
Estado 11 conflitos: 2 de deslocamento/redução
Estado 26 conflitos: 2 de deslocamento/redução
Estado 75 conflitos: 1 de deslocamento/redução
Estado 78 conflitos: 1 de deslocamento/redução
Estado 79 conflitos: 1 de deslocamento/redução
Estado 103 conflitos: 1 de deslocamento/redução
Estado 112 conflitos: 10 de deslocamento/redução
Estado 113 conflitos: 1 de deslocamento/redução
Estado 114 conflitos: 1 de deslocamento/redução
Estado 115 conflitos: 1 de deslocamento/redução
Estado 116 conflitos: 1 de deslocamento/redução
Estado 117 conflitos: 1 de deslocamento/redução
Estado 118 conflitos: 1 de deslocamento/redução
Estado 119 conflitos: 1 de deslocamento/redução
Estado 124 conflitos: 10 de deslocamento/redução
Estado 151 conflitos: 10 de deslocamento/redução
Estado 162 conflitos: 10 de deslocamento/redução


Gramática

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' features_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' features_list '}' ';'
    6      | CLASS TYPEID '{' error '}' ';'
    7      | CLASS error '{' features_list '}' ';'
    8      | CLASS error '{' error '}' ';'

    9 features_list: features_list feature
   10              | feature
   11              | %empty

   12 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   13        | OBJECTID ':' TYPEID ';'
   14        | OBJECTID ':' TYPEID ASSIGN expr ';'
   15        | OBJECTID ':' TYPEID ASSIGN '{' expr '}' ';'
   16        | error ';'

   17 formal_list: formal
   18            | formal_list ',' formal
   19            | %empty

   20 formal: OBJECTID ':' TYPEID

   21 case_list: case
   22          | case_list case

   23 case: OBJECTID ':' TYPEID DARROW expr ';'

   24 expr: const_expr
   25     | OBJECTID
   26     | OBJECTID ASSIGN expr
   27     | disp_expr
   28     | IF expr THEN expr ELSE expr FI
   29     | CASE expr OF case_list ESAC
   30     | WHILE expr LOOP expr POOL
   31     | '{' expr_list '}'
   32     | LET let_expr
   33     | NEW TYPEID
   34     | ISVOID expr
   35     | '(' expr ')'
   36     | op_expr

   37 disp_expr: expr '.' OBJECTID '(' param_expr ')'
   38          | expr '@' TYPEID '.' OBJECTID '(' param_expr ')'
   39          | OBJECTID '(' param_expr ')'

   40 const_expr: INT_CONST
   41           | STR_CONST
   42           | BOOL_CONST

   43 op_expr: expr '+' expr
   44        | expr '-' expr
   45        | expr '*' expr
   46        | expr '/' expr
   47        | '~' expr
   48        | expr '<' expr
   49        | expr LE expr
   50        | expr '=' expr
   51        | NOT expr
   52        | expr error expr

   53 let_expr: OBJECTID ':' TYPEID IN expr
   54         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   55         | OBJECTID ':' TYPEID ',' let_expr
   56         | OBJECTID ':' TYPEID ASSIGN expr ',' let_expr
   57         | error IN expr
   58         | error ',' let_expr

   59 expr_list: expr ';'
   60          | expr_list expr ';'
   61          | error ';'

   62 param_expr: expr
   63           | param_expr ',' expr
   64           | %empty


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '(' (40) 12 35 37 38 39
    ')' (41) 12 35 37 38 39
    '*' (42) 45
    '+' (43) 43
    ',' (44) 18 55 56 58 63
    '-' (45) 44
    '.' (46) 37 38
    '/' (47) 46
    ':' (58) 12 13 14 15 20 23 53 54 55 56
    ';' (59) 4 5 6 7 8 12 13 14 15 16 23 59 60 61
    '<' (60) 48
    '=' (61) 50
    '@' (64) 38
    '{' (123) 4 5 6 7 8 12 15 31
    '}' (125) 4 5 6 7 8 12 15 31
    '~' (126) 47
    error (256) 6 7 8 16 52 57 58 61
    CLASS (258) 4 5 6 7 8
    ELSE (259) 28
    FI (260) 28
    IF (261) 28
    IN (262) 53 54 57
    INHERITS (263) 5
    LET (264) 32
    LOOP (265) 30
    POOL (266) 30
    THEN (267) 28
    WHILE (268) 30
    CASE (269) 29
    ESAC (270) 29
    OF (271) 29
    DARROW (272) 23
    NEW (273) 33
    ISVOID (274) 34
    STR_CONST <symbol> (275) 41
    INT_CONST <symbol> (276) 40
    BOOL_CONST <boolean> (277) 42
    TYPEID <symbol> (278) 4 5 6 12 13 14 15 20 23 33 38 53 54 55 56
    OBJECTID <symbol> (279) 12 13 14 15 20 23 25 26 37 38 39 53 54 55 56
    ASSIGN (280) 14 15 26 54 56
    NOT (281) 51
    LE (282) 49
    ERROR (283)


Não terminais com as regras onde eles aparecem

    $accept (45)
        à esquerda: 0
    program <program> (46)
        à esquerda: 1
        à direita: 0
    class_list <classes> (47)
        à esquerda: 2 3
        à direita: 1 3
    class <class_> (48)
        à esquerda: 4 5 6 7 8
        à direita: 2 3
    features_list <features> (49)
        à esquerda: 9 10 11
        à direita: 4 5 7 9
    feature <feature> (50)
        à esquerda: 12 13 14 15 16
        à direita: 9 10
    formal_list <formals> (51)
        à esquerda: 17 18 19
        à direita: 12 18
    formal <formal> (52)
        à esquerda: 20
        à direita: 17 18
    case_list <cases> (53)
        à esquerda: 21 22
        à direita: 22 29
    case <case_> (54)
        à esquerda: 23
        à direita: 21 22
    expr <expression> (55)
        à esquerda: 24 25 26 27 28 29 30 31 32 33 34 35 36
        à direita: 12 14 15 23 26 28 29 30 34 35 37 38 43 44 45 46 47 48 49 50 51 52 53 54 56 57 59 60 62 63
    disp_expr <expression> (56)
        à esquerda: 37 38 39
        à direita: 27
    const_expr <expression> (57)
        à esquerda: 40 41 42
        à direita: 24
    op_expr <expression> (58)
        à esquerda: 43 44 45 46 47 48 49 50 51 52
        à direita: 36
    let_expr <expression> (59)
        à esquerda: 53 54 55 56 57 58
        à direita: 32 55 56 58
    expr_list <expressions> (60)
        à esquerda: 59 60 61
        à direita: 31 60
    param_expr <expressions> (61)
        à esquerda: 62 63 64
        à direita: 37 38 39 63


Estado 0

    0 $accept: . program $end

    CLASS  deslocar, e ir ao estado 1

    program     ir ao estado 2
    class_list  ir ao estado 3
    class       ir ao estado 4


Estado 1

    4 class: CLASS . TYPEID '{' features_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' features_list '}' ';'
    6      | CLASS . TYPEID '{' error '}' ';'
    7      | CLASS . error '{' features_list '}' ';'
    8      | CLASS . error '{' error '}' ';'

    error   deslocar, e ir ao estado 5
    TYPEID  deslocar, e ir ao estado 6


Estado 2

    0 $accept: program . $end

    $end  deslocar, e ir ao estado 7


Estado 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  deslocar, e ir ao estado 1

    $padrão  reduzir usando a regra 1 (program)

    class  ir ao estado 8


Estado 4

    2 class_list: class .

    $padrão  reduzir usando a regra 2 (class_list)


Estado 5

    7 class: CLASS error . '{' features_list '}' ';'
    8      | CLASS error . '{' error '}' ';'

    '{'  deslocar, e ir ao estado 9


Estado 6

    4 class: CLASS TYPEID . '{' features_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' features_list '}' ';'
    6      | CLASS TYPEID . '{' error '}' ';'

    INHERITS  deslocar, e ir ao estado 10
    '{'       deslocar, e ir ao estado 11


Estado 7

    0 $accept: program $end .

    $padrão  aceitar


Estado 8

    3 class_list: class_list class .

    $padrão  reduzir usando a regra 3 (class_list)


Estado 9

    7 class: CLASS error '{' . features_list '}' ';'
    8      | CLASS error '{' . error '}' ';'

    error     deslocar, e ir ao estado 12
    OBJECTID  deslocar, e ir ao estado 13

    error     [reduzir usando a regra 11 (features_list)]
    OBJECTID  [reduzir usando a regra 11 (features_list)]
    '}'       reduzir usando a regra 11 (features_list)

    features_list  ir ao estado 14
    feature        ir ao estado 15


Estado 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' features_list '}' ';'

    TYPEID  deslocar, e ir ao estado 16


Estado 11

    4 class: CLASS TYPEID '{' . features_list '}' ';'
    6      | CLASS TYPEID '{' . error '}' ';'

    error     deslocar, e ir ao estado 17
    OBJECTID  deslocar, e ir ao estado 13

    error     [reduzir usando a regra 11 (features_list)]
    OBJECTID  [reduzir usando a regra 11 (features_list)]
    '}'       reduzir usando a regra 11 (features_list)

    features_list  ir ao estado 18
    feature        ir ao estado 15


Estado 12

    8 class: CLASS error '{' error . '}' ';'
   16 feature: error . ';'

    '}'  deslocar, e ir ao estado 19
    ';'  deslocar, e ir ao estado 20


Estado 13

   12 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   13        | OBJECTID . ':' TYPEID ';'
   14        | OBJECTID . ':' TYPEID ASSIGN expr ';'
   15        | OBJECTID . ':' TYPEID ASSIGN '{' expr '}' ';'

    '('  deslocar, e ir ao estado 21
    ':'  deslocar, e ir ao estado 22


Estado 14

    7 class: CLASS error '{' features_list . '}' ';'
    9 features_list: features_list . feature

    error     deslocar, e ir ao estado 23
    OBJECTID  deslocar, e ir ao estado 13
    '}'       deslocar, e ir ao estado 24

    feature  ir ao estado 25


Estado 15

   10 features_list: feature .

    $padrão  reduzir usando a regra 10 (features_list)


Estado 16

    5 class: CLASS TYPEID INHERITS TYPEID . '{' features_list '}' ';'

    '{'  deslocar, e ir ao estado 26


Estado 17

    6 class: CLASS TYPEID '{' error . '}' ';'
   16 feature: error . ';'

    '}'  deslocar, e ir ao estado 27
    ';'  deslocar, e ir ao estado 20


Estado 18

    4 class: CLASS TYPEID '{' features_list . '}' ';'
    9 features_list: features_list . feature

    error     deslocar, e ir ao estado 23
    OBJECTID  deslocar, e ir ao estado 13
    '}'       deslocar, e ir ao estado 28

    feature  ir ao estado 25


Estado 19

    8 class: CLASS error '{' error '}' . ';'

    ';'  deslocar, e ir ao estado 29


Estado 20

   16 feature: error ';' .

    $padrão  reduzir usando a regra 16 (feature)


Estado 21

   12 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  deslocar, e ir ao estado 30

    $padrão  reduzir usando a regra 19 (formal_list)

    formal_list  ir ao estado 31
    formal       ir ao estado 32


Estado 22

   13 feature: OBJECTID ':' . TYPEID ';'
   14        | OBJECTID ':' . TYPEID ASSIGN expr ';'
   15        | OBJECTID ':' . TYPEID ASSIGN '{' expr '}' ';'

    TYPEID  deslocar, e ir ao estado 33


Estado 23

   16 feature: error . ';'

    ';'  deslocar, e ir ao estado 20


Estado 24

    7 class: CLASS error '{' features_list '}' . ';'

    ';'  deslocar, e ir ao estado 34


Estado 25

    9 features_list: features_list feature .

    $padrão  reduzir usando a regra 9 (features_list)


Estado 26

    5 class: CLASS TYPEID INHERITS TYPEID '{' . features_list '}' ';'

    error     deslocar, e ir ao estado 23
    OBJECTID  deslocar, e ir ao estado 13

    error     [reduzir usando a regra 11 (features_list)]
    OBJECTID  [reduzir usando a regra 11 (features_list)]
    '}'       reduzir usando a regra 11 (features_list)

    features_list  ir ao estado 35
    feature        ir ao estado 15


Estado 27

    6 class: CLASS TYPEID '{' error '}' . ';'

    ';'  deslocar, e ir ao estado 36


Estado 28

    4 class: CLASS TYPEID '{' features_list '}' . ';'

    ';'  deslocar, e ir ao estado 37


Estado 29

    8 class: CLASS error '{' error '}' ';' .

    $padrão  reduzir usando a regra 8 (class)


Estado 30

   20 formal: OBJECTID . ':' TYPEID

    ':'  deslocar, e ir ao estado 38


Estado 31

   12 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}' ';'
   18 formal_list: formal_list . ',' formal

    ')'  deslocar, e ir ao estado 39
    ','  deslocar, e ir ao estado 40


Estado 32

   17 formal_list: formal .

    $padrão  reduzir usando a regra 17 (formal_list)


Estado 33

   13 feature: OBJECTID ':' TYPEID . ';'
   14        | OBJECTID ':' TYPEID . ASSIGN expr ';'
   15        | OBJECTID ':' TYPEID . ASSIGN '{' expr '}' ';'

    ASSIGN  deslocar, e ir ao estado 41
    ';'     deslocar, e ir ao estado 42


Estado 34

    7 class: CLASS error '{' features_list '}' ';' .

    $padrão  reduzir usando a regra 7 (class)


Estado 35

    5 class: CLASS TYPEID INHERITS TYPEID '{' features_list . '}' ';'
    9 features_list: features_list . feature

    error     deslocar, e ir ao estado 23
    OBJECTID  deslocar, e ir ao estado 13
    '}'       deslocar, e ir ao estado 43

    feature  ir ao estado 25


Estado 36

    6 class: CLASS TYPEID '{' error '}' ';' .

    $padrão  reduzir usando a regra 6 (class)


Estado 37

    4 class: CLASS TYPEID '{' features_list '}' ';' .

    $padrão  reduzir usando a regra 4 (class)


Estado 38

   20 formal: OBJECTID ':' . TYPEID

    TYPEID  deslocar, e ir ao estado 44


Estado 39

   12 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  deslocar, e ir ao estado 45


Estado 40

   18 formal_list: formal_list ',' . formal

    OBJECTID  deslocar, e ir ao estado 30

    formal  ir ao estado 46


Estado 41

   14 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'
   15        | OBJECTID ':' TYPEID ASSIGN . '{' expr '}' ';'

    IF          deslocar, e ir ao estado 47
    LET         deslocar, e ir ao estado 48
    WHILE       deslocar, e ir ao estado 49
    CASE        deslocar, e ir ao estado 50
    NEW         deslocar, e ir ao estado 51
    ISVOID      deslocar, e ir ao estado 52
    STR_CONST   deslocar, e ir ao estado 53
    INT_CONST   deslocar, e ir ao estado 54
    BOOL_CONST  deslocar, e ir ao estado 55
    OBJECTID    deslocar, e ir ao estado 56
    NOT         deslocar, e ir ao estado 57
    '~'         deslocar, e ir ao estado 58
    '{'         deslocar, e ir ao estado 59
    '('         deslocar, e ir ao estado 60

    expr        ir ao estado 61
    disp_expr   ir ao estado 62
    const_expr  ir ao estado 63
    op_expr     ir ao estado 64


Estado 42

   13 feature: OBJECTID ':' TYPEID ';' .

    $padrão  reduzir usando a regra 13 (feature)


Estado 43

    5 class: CLASS TYPEID INHERITS TYPEID '{' features_list '}' . ';'

    ';'  deslocar, e ir ao estado 65


Estado 44

   20 formal: OBJECTID ':' TYPEID .

    $padrão  reduzir usando a regra 20 (formal)


Estado 45

   12 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  deslocar, e ir ao estado 66


Estado 46

   18 formal_list: formal_list ',' formal .

    $padrão  reduzir usando a regra 18 (formal_list)


Estado 47

   28 expr: IF . expr THEN expr ELSE expr FI

    IF          deslocar, e ir ao estado 47
    LET         deslocar, e ir ao estado 48
    WHILE       deslocar, e ir ao estado 49
    CASE        deslocar, e ir ao estado 50
    NEW         deslocar, e ir ao estado 51
    ISVOID      deslocar, e ir ao estado 52
    STR_CONST   deslocar, e ir ao estado 53
    INT_CONST   deslocar, e ir ao estado 54
    BOOL_CONST  deslocar, e ir ao estado 55
    OBJECTID    deslocar, e ir ao estado 56
    NOT         deslocar, e ir ao estado 57
    '~'         deslocar, e ir ao estado 58
    '{'         deslocar, e ir ao estado 67
    '('         deslocar, e ir ao estado 60

    expr        ir ao estado 68
    disp_expr   ir ao estado 62
    const_expr  ir ao estado 63
    op_expr     ir ao estado 64


Estado 48

   32 expr: LET . let_expr

    error     deslocar, e ir ao estado 69
    OBJECTID  deslocar, e ir ao estado 70

    let_expr  ir ao estado 71


Estado 49

   30 expr: WHILE . expr LOOP expr POOL

    IF          deslocar, e ir ao estado 47
    LET         deslocar, e ir ao estado 48
    WHILE       deslocar, e ir ao estado 49
    CASE        deslocar, e ir ao estado 50
    NEW         deslocar, e ir ao estado 51
    ISVOID      deslocar, e ir ao estado 52
    STR_CONST   deslocar, e ir ao estado 53
    INT_CONST   deslocar, e ir ao estado 54
    BOOL_CONST  deslocar, e ir ao estado 55
    OBJECTID    deslocar, e ir ao estado 56
    NOT         deslocar, e ir ao estado 57
    '~'         deslocar, e ir ao estado 58
    '{'         deslocar, e ir ao estado 67
    '('         deslocar, e ir ao estado 60

    expr        ir ao estado 72
    disp_expr   ir ao estado 62
    const_expr  ir ao estado 63
    op_expr     ir ao estado 64


Estado 50

   29 expr: CASE . expr OF case_list ESAC

    IF          deslocar, e ir ao estado 47
    LET         deslocar, e ir ao estado 48
    WHILE       deslocar, e ir ao estado 49
    CASE        deslocar, e ir ao estado 50
    NEW         deslocar, e ir ao estado 51
    ISVOID      deslocar, e ir ao estado 52
    STR_CONST   deslocar, e ir ao estado 53
    INT_CONST   deslocar, e ir ao estado 54
    BOOL_CONST  deslocar, e ir ao estado 55
    OBJECTID    deslocar, e ir ao estado 56
    NOT         deslocar, e ir ao estado 57
    '~'         deslocar, e ir ao estado 58
    '{'         deslocar, e ir ao estado 67
    '('         deslocar, e ir ao estado 60

    expr        ir ao estado 73
    disp_expr   ir ao estado 62
    const_expr  ir ao estado 63
    op_expr     ir ao estado 64


Estado 51

   33 expr: NEW . TYPEID

    TYPEID  deslocar, e ir ao estado 74


Estado 52

   34 expr: ISVOID . expr

    IF          deslocar, e ir ao estado 47
    LET         deslocar, e ir ao estado 48
    WHILE       deslocar, e ir ao estado 49
    CASE        deslocar, e ir ao estado 50
    NEW         deslocar, e ir ao estado 51
    ISVOID      deslocar, e ir ao estado 52
    STR_CONST   deslocar, e ir ao estado 53
    INT_CONST   deslocar, e ir ao estado 54
    BOOL_CONST  deslocar, e ir ao estado 55
    OBJECTID    deslocar, e ir ao estado 56
    NOT         deslocar, e ir ao estado 57
    '~'         deslocar, e ir ao estado 58
    '{'         deslocar, e ir ao estado 67
    '('         deslocar, e ir ao estado 60

    expr        ir ao estado 75
    disp_expr   ir ao estado 62
    const_expr  ir ao estado 63
    op_expr     ir ao estado 64


Estado 53

   41 const_expr: STR_CONST .

    $padrão  reduzir usando a regra 41 (const_expr)


Estado 54

   40 const_expr: INT_CONST .

    $padrão  reduzir usando a regra 40 (const_expr)


Estado 55

   42 const_expr: BOOL_CONST .

    $padrão  reduzir usando a regra 42 (const_expr)


Estado 56

   25 expr: OBJECTID .
   26     | OBJECTID . ASSIGN expr
   39 disp_expr: OBJECTID . '(' param_expr ')'

    ASSIGN  deslocar, e ir ao estado 76
    '('     deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 25 (expr)


Estado 57

   51 op_expr: NOT . expr

    IF          deslocar, e ir ao estado 47
    LET         deslocar, e ir ao estado 48
    WHILE       deslocar, e ir ao estado 49
    CASE        deslocar, e ir ao estado 50
    NEW         deslocar, e ir ao estado 51
    ISVOID      deslocar, e ir ao estado 52
    STR_CONST   deslocar, e ir ao estado 53
    INT_CONST   deslocar, e ir ao estado 54
    BOOL_CONST  deslocar, e ir ao estado 55
    OBJECTID    deslocar, e ir ao estado 56
    NOT         deslocar, e ir ao estado 57
    '~'         deslocar, e ir ao estado 58
    '{'         deslocar, e ir ao estado 67
    '('         deslocar, e ir ao estado 60

    expr        ir ao estado 78
    disp_expr   ir ao estado 62
    const_expr  ir ao estado 63
    op_expr     ir ao estado 64


Estado 58

   47 op_expr: '~' . expr

    IF          deslocar, e ir ao estado 47
    LET         deslocar, e ir ao estado 48
    WHILE       deslocar, e ir ao estado 49
    CASE        deslocar, e ir ao estado 50
    NEW         deslocar, e ir ao estado 51
    ISVOID      deslocar, e ir ao estado 52
    STR_CONST   deslocar, e ir ao estado 53
    INT_CONST   deslocar, e ir ao estado 54
    BOOL_CONST  deslocar, e ir ao estado 55
    OBJECTID    deslocar, e ir ao estado 56
    NOT         deslocar, e ir ao estado 57
    '~'         deslocar, e ir ao estado 58
    '{'         deslocar, e ir ao estado 67
    '('         deslocar, e ir ao estado 60

    expr        ir ao estado 79
    disp_expr   ir ao estado 62
    const_expr  ir ao estado 63
    op_expr     ir ao estado 64


Estado 59

   15 feature: OBJECTID ':' TYPEID ASSIGN '{' . expr '}' ';'
   31 expr: '{' . expr_list '}'

    error       deslocar, e ir ao estado 80
    IF          deslocar, e ir ao estado 47
    LET         deslocar, e ir ao estado 48
    WHILE       deslocar, e ir ao estado 49
    CASE        deslocar, e ir ao estado 50
    NEW         deslocar, e ir ao estado 51
    ISVOID      deslocar, e ir ao estado 52
    STR_CONST   deslocar, e ir ao estado 53
    INT_CONST   deslocar, e ir ao estado 54
    BOOL_CONST  deslocar, e ir ao estado 55
    OBJECTID    deslocar, e ir ao estado 56
    NOT         deslocar, e ir ao estado 57
    '~'         deslocar, e ir ao estado 58
    '{'         deslocar, e ir ao estado 67
    '('         deslocar, e ir ao estado 60

    expr        ir ao estado 81
    disp_expr   ir ao estado 62
    const_expr  ir ao estado 63
    op_expr     ir ao estado 64
    expr_list   ir ao estado 82


Estado 60

   35 expr: '(' . expr ')'

    IF          deslocar, e ir ao estado 47
    LET         deslocar, e ir ao estado 48
    WHILE       deslocar, e ir ao estado 49
    CASE        deslocar, e ir ao estado 50
    NEW         deslocar, e ir ao estado 51
    ISVOID      deslocar, e ir ao estado 52
    STR_CONST   deslocar, e ir ao estado 53
    INT_CONST   deslocar, e ir ao estado 54
    BOOL_CONST  deslocar, e ir ao estado 55
    OBJECTID    deslocar, e ir ao estado 56
    NOT         deslocar, e ir ao estado 57
    '~'         deslocar, e ir ao estado 58
    '{'         deslocar, e ir ao estado 67
    '('         deslocar, e ir ao estado 60

    expr        ir ao estado 83
    disp_expr   ir ao estado 62
    const_expr  ir ao estado 63
    op_expr     ir ao estado 64


Estado 61
